# battlesnake-game-types

./: Cargo.toml  readme.md
benches/: bench_evaluate.rs  evaluate.rs  pea_eater.rs  pea_eater_criterion.rs  start_of_game_compact.rs
fixtures/: 4_snake_game.json  7x7board.json  8x8board.json  all-options-dead-prefer-out-of-bounds.json  another_crash.json  another_wraped_panic_serialized.json  another_wrapped_panic.json  arcade_maze_map.json  body_collision.json  cornered.json  cornered_wrapped.json  crash_json_hash.json  dont_crash_other_snakes  e80b70e7-a916-40ca-82d2-ad76e074efe1_0.json  empty_str_hazard.json  goes_for_food.json  hazard_map_settings.json  inconsistent_fixture.json  late_stage.json  negative_hazard.json  stacked_hazards.json  start_of_game.json  tail_chase.json  this_one_crashed.json  tree_search_collision.json  wrapped_fixture.json  wrapped_panic.json
fixtures/debug_wrapped/: debug_game_1.json  debug_game_10.json  debug_game_100.json  debug_game_101.json  debug_game_102.json  debug_game_103.json  debug_game_104.json  debug_game_105.json  debug_game_106.json  debug_game_107.json  debug_game_108.json  debug_game_109.json  debug_game_11.json  debug_game_110.json  debug_game_111.json  debug_game_112.json  debug_game_113.json  debug_game_114.json  debug_game_115.json  debug_game_116.json  debug_game_117.json  debug_game_118.json  debug_game_119.json  debug_game_12.json  debug_game_120.json  debug_game_121.json  debug_game_122.json  debug_game_123.json  debug_game_124.json  debug_game_125.json  debug_game_126.json  debug_game_127.json  debug_game_128.json  debug_game_129.json  debug_game_13.json  debug_game_130.json  debug_game_131.json  debug_game_132.json  debug_game_133.json  debug_game_134.json  (+153 more)
src/: cross_product.rs  lib.rs  types.rs
src/compact_representation/: dimensions.rs  eval.rs  mod.rs
src/compact_representation/core/: cell_num.rs  impl_common.rs  mod.rs  simulate.rs
src/compact_representation/core/cell_board/: eval.rs  food_gettable.rs  hazard_queryable.rs  mod.rs  (+11 more)
src/compact_representation/standard/: eval.rs  mod.rs
src/compact_representation/wrapped/: eval.rs  mod.rs
src/hazard_algorithms/: mod.rs
src/wire_representation/: mod.rs  simulator.rs
src/wrapped_compact_representation/: eval.rs  mod.rs
