[package]
name = "battlesnake-game-types"
version = "0.1.0"
authors = ["Penelope Phippen <penelope@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
rand = "0.8.4"
itertools = "0.10.1"
fxhash = "0.2.1"

[dev-dependencies]
serde_json = "1.0"
criterion = "0.3"

[[bench]]
name = "start_of_game_compact"
harness = false
