[package]
name = "battlesnake-game-types"
version = "0.17.0"
authors = ["Penelope Phippen <penelope@hey.com>", "Corey Alexander <coreyja@gmail.com>"]
edition = "2018"
description = "game types for play.battlesnake.com"
license = "Apache-2.0"
repository = "https://github.com/penelopezone/battlesnake-game-types"
documentation = "https://docs.rs/battlesnake-game-types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
rand =  {version = "0.8.5", features = ["small_rng"] }
itertools = "0.10.3"
fxhash = "0.2.1"
serde_json = "1.0"
tracing = { version = "0.1.37" }

[dev-dependencies]
criterion = "0.4"
pprof = { version = "0.11", default-features=false, features = ["flamegraph", "frame-pointer"] }
tracing-subscriber = "0.3.16"
tracing-flame = "0.2.0"

[[bench]]
name = "start_of_game_compact"
harness = false

[[bench]]
name = "pea_eater"
harness = false
